# alert-whisperer-azure-ai

./: .env.example  .gitignore  Makefile  README.md  app.py  data_gaps_summary.md  mcp_gaps_summary.md  prompt_gaps_summary.md  pyproject.toml  rag_gaps_summary.md
.streamlit/: config.toml
config/: pipeline_ownership.json  settings.py
docs/: ARCHITECTURE.md  PROMPT_ENGINEERING.md  RAG_Pipeline_Flow.md  Round2_Gap_Summary.md  Vector_Search_Schema.md  round2_gap_triage.md
docs/scenarios/: Scenario_1_Spark_OOM_Daily_Ingest.md  Scenario_2_Kusto_Ingestion_Mapping_Error.md  Scenario_3_Cascading_Multi_System_Failure.md  Scenario_4_Ambiguous_Freeform_Query.md
src/: models.py
src/connectors/: __init__.py  confluence_connector.py  icm_connector.py  kusto_connector.py  loganalytics_connector.py  mcp_base.py
src/engine/: __init__.py  alert_dedup.py  alert_processor.py  alert_triage.py  chat_engine.py  data_refresh.py  feedback_store.py
src/prompts/: __init__.py  prompt_engine.py  templates.py
src/rag/: __init__.py  advanced_techniques.py  retriever.py  vector_store.py
src/utils/: demo_data.py  export_markdown.py  logging_config.py  resilience.py
tests/: test_chat_engine.py  test_models.py  test_prompts.py
ui/components/: alert_detail.py  chat_panel.py  dashboard.py  knowledge_base.py  rag_observability.py  settings_page.py  sidebar.py
