[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-whisperer"
version = "1.0.0"
description = "GenAI-powered real-time failure detection, routing & conversational troubleshooting for Spark, Synapse, and Kusto pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Data Engineering Team"}]

dependencies = [
    "streamlit>=1.38.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.15.0",
    "azure-monitor-query>=1.2.0",
    "azure-kusto-data>=4.3.1",
    "tiktoken>=0.5.2",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "msal>=1.26.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.2",
    "jinja2>=3.1.3",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
reranker = [
    "sentence-transformers>=2.6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
